test/log/shift/vwsrl_wx_u32_m.txt
vwsrl_wx_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwsrl_wx_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwsrl_wx_u32_m.c:30:6: warning: no previous prototype for 'vwsrl_wx_u32_m_golden' [-Wmissing-prototypes]
   30 | void vwsrl_wx_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t b,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vwsrl_wx_u32_m.c: In function 'vwsrl_wx_u32_m_golden':
vwsrl_wx_u32_m.c:32:32: error: invalid operands to binary >> (have 'uint64_t' {aka 'long long unsigned int'} and 'uint32_t *' {aka 'long unsigned int *'})
   32 |         exp_result[i] = mask[i]>>maskoff;
      |                         ~~~~~~~^~
      |                             |
      |                             uint64_t {aka long long unsigned int}
vwsrl_wx_u32_m.c:30:71: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vwsrl_wx_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t b,uint32_t *exp_result) {
      |                                                             ~~~~~~~~~~^
vwsrl_wx_u32_m.c:30:82: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vwsrl_wx_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t b,uint32_t *exp_result) {
      |                                                                         ~~~~~~~~~^
vwsrl_wx_u32_m.c: In function 'main':
vwsrl_wx_u32_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vwsrl_wx_u32_m.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwsrl_wx_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwsrl_wx_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwsrl_wx_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwsrl_wx_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed